// Project
Project bakers_percentage_calculator {
  database_type: "SQLite"
  Note: '''
    Schema for database used by https://observablehq.com/@jagrafft/bakers-percentage-calculator.
    
    *Notes*
    - DBML does not support
      - SQLite
      - Full specification of `CONSTRAINT`s
  '''
}

// Tables
Table data_authors [headercolor: #946fc7] {
  id INT [pk]
  author TEXT [not null, unique]
  Note: "Full name of an author, as it appears in the citation."
}

Table data_dates [headercolor: #946fc7] {
  id INT [pk]
  dt TEXT [not null, unique]
  Note: "Access and publication dates for citations. Stored as text to avoid issues with nonstandard formatting."
}

Table data_ingredients [headercolor: #946fc7] {
  id INT [pk]
  ingredient TEXT [not null, unique]
  Note: "Unique names of ingredients."
}

Table data_default_masses [headercolor: #946fc7] {
  id INT [pk]
  grams DECIMAL(11,3) [not null, unique]
  Note: "Default masses for individual recipes."
}

Table data_ratios [headercolor: #946fc7] {
  id INT [pk]
  ratio DECIMAL(5,4) [not null, unique]
  // Not yet supported by DBML
  // CONSTRAINT data_ratios_ratio_range CHECK(ratio >= 0.0 and ratio <= 1.0)
  
  Note: "Number in range `[0.0,1.0]` indicating the [Baker's Percentage](https://www.kingarthurbaking.com/pro/reference/bakers-percentage)."
}

Table data_titles [headercolor: #946fc7] {
  id INT [pk]
  title TEXT [not null, unique]
  Note: "Recipe and citation titles."
}

Table data_urls [headercolor: #946fc7] {
  id INT [pk]
  url TEXT [not null, unique]
  Note: '''
  URL for citation.
  
  *Note*
  - URLs are used as globally unique identifiers
  '''
}

TableGroup Data {
  data_authors
  data_dates
  data_default_masses
  data_ingredients
  data_ratios
  data_titles
  data_urls
}

Table recipe_access_dates [headercolor: #7aa444] {
  url_id INT [pk]
  date_id INT [not null]
  
  indexes {
    (url_id, date_id) [unique]
  }
  
  Note: "Access date of citation for individual recipes."
}
Ref: recipe_access_dates.url_id - data_urls.id [delete: cascade, update: cascade]
Ref: recipe_access_dates.date_id - data_dates.id [delete: cascade, update: cascade]

Table recipe_authors [headercolor: #7aa444] {
  url_id INT [pk]
  author_id INT [not null]
  
  indexes {
    (url_id, author_id) [unique]
  }
  
  Note: "Formatted author name for recipe citations."
}
Ref: recipe_authors.url_id > data_urls.id [delete: cascade, update: cascade]
Ref: recipe_authors.author_id > data_authors.id [delete: cascade, update: cascade]

Table recipe_bakers_percentages [headercolor: #7aa444] {
  url_id INT [pk]
  ingredient_id INT [not null]
  ratio_id INT [not null]
  
  indexes {
    (url_id, ingredient_id, ratio_id) [unique]
  }
  
  Note: "Key pairings for a recipe's list of ingredients."
}
Ref: recipe_bakers_percentages.url_id > data_urls.id [delete: cascade, update: cascade]
Ref: recipe_bakers_percentages.ratio_id > data_ratios.id [delete: cascade, update: cascade]
Ref: recipe_bakers_percentages.ingredient_id > data_ingredients.id [delete: cascade, update: cascade]

Table recipe_citation_titles [headercolor: #7aa444] {
  url_id INT [pk]
  title_id INT [not null]
  
  indexes {
    (url_id, title_id) [unique]
  }
  
  Note: "Citation titles for recipes."
}
Ref: recipe_citation_titles.url_id - data_urls.id [delete: cascade, update: cascade]
Ref: recipe_citation_titles.title_id - data_titles.id [delete: cascade, update: cascade]

Table recipe_dates [headercolor: #7aa444] {
  url_id INT [pk]
  date_id INT [not null]
  
  indexes {
    (url_id, date_id) [unique]
  }
  
  Note: "Publication dates for recipes."
}
Ref: recipe_dates.url_id - data_urls.id [delete: cascade, update: cascade]
Ref: recipe_dates.date_id - data_dates.id [delete: cascade, update: cascade]

Table recipe_default_masses [headercolor: #7aa444] {
  url_id INT [pk]
  grams_id INT [not null]
  
  indexes {
    (url_id, grams_id) [unique]
  }
  
  Note: "Default mass for each recipe, used to calcuate grams for each ingredient in a recipe from its baker's percentages."
}
Ref: recipe_default_masses.url_id - data_urls.id [delete: cascade, update: cascade]
Ref: recipe_default_masses.grams_id - data_default_masses.id [delete: cascade, update: cascade]

Table recipe_titles [headercolor: #7aa444] {
  url_id INT [pk]
  title_id INT [not null]
  
  indexes {
    (url_id, title_id) [unique]
  }
  
  Note: "Titles for recipes used in mastheads, dropdowns, and the like."
}
Ref: recipe_titles.url_id - data_urls.id [delete: cascade, update: cascade]
Ref: recipe_titles.title_id - data_titles.id [delete: cascade, update: cascade]

TableGroup Recipe {
  recipe_access_dates
  recipe_authors
  recipe_bakers_percentages
  recipe_citation_titles
  recipe_dates
  recipe_default_masses
  recipe_titles
}
